tests/ui/static/ref-to-mut-static.e2024.stderr
error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:40:18
   |
LL |         let _y = &X;
   |                  ^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         let _y = addr_of!(X);
   |                  ~~~~~~~~~ +

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:44:18
   |
LL |         let _y = &mut X;
   |                  ^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives
help: use `addr_of_mut!` instead to create a raw pointer
   |
LL |         let _y = addr_of_mut!(X);
   |                  ~~~~~~~~~~~~~ +

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:52:22
   |
LL |         let ref _a = X;
   |                      ^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:56:25
   |
LL |         let (_b, _c) = (&X, &Y);
   |                         ^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         let (_b, _c) = (addr_of!(X), &Y);
   |                         ~~~~~~~~~ +

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:56:29
   |
LL |         let (_b, _c) = (&X, &Y);
   |                             ^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         let (_b, _c) = (&X, addr_of!(Y));
   |                             ~~~~~~~~~ +

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:62:13
   |
LL |         foo(&X);
   |             ^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         foo(addr_of!(X));
   |             ~~~~~~~~~ +

error[E0796]: creating a reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:71:17
   |
LL |         let _ = Z[0];
   |                 ^^^^ reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:74:33
   |
LL |         let _ = format!("{:?}", Z);
   |                                 ^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:78:18
   |
LL |         let _v = &A.value;
   |                  ^^^^^^^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         let _v = addr_of!(A.value);
   |                  ~~~~~~~~~       +

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:82:18
   |
LL |         let _s = &A.s.value;
   |                  ^^^^^^^^^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives
help: use `addr_of!` instead to create a raw pointer
   |
LL |         let _s = addr_of!(A.s.value);
   |                  ~~~~~~~~~         +

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:86:22
   |
LL |         let ref _v = A.value;
   |                      ^^^^^^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:16:14
   |
LL |         &mut ($x.0)
   |              ^^^^^^ mutable reference to mutable static
...
LL |         let _x = bar!(FOO);
   |                  --------- in this macro invocation
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives
   = note: this error originates in the macro `bar` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:92:9
   |
LL |         STATIC += 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:95:9
   |
LL |         STATIC *= 100;
   |         ^^^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:98:9
   |
LL |         STATIC /= 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:101:9
   |
LL |         STATIC -= 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:104:9
   |
LL |         STATIC |= 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:107:9
   |
LL |         STATIC &= 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:110:9
   |
LL |         STATIC ^= 1;
   |         ^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:113:9
   |
LL |         STATIC <<= 1;
   |         ^^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a mutable reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:116:9
   |
LL |         STATIC >>= 1;
   |         ^^^^^^^^^^^^^ mutable reference to mutable static
   |
   = note: mutable references to mutable statics are dangerous; it's undefined behavior if any other pointer to the static is used or if any other reference is created for the static while the mutable reference lives

error[E0796]: creating a shared reference to a mutable static
  --> $DIR/ref-to-mut-static.rs:68:17
   |
LL |         let _ = Z.len();
   |                 ^^^^^^^ shared reference to mutable static
   |
   = note: shared references to mutable statics are dangerous; it's undefined behavior if the static is mutated or if a mutable reference is created for it while the shared reference lives

error: aborting due to 22 previous errors

For more information about this error, try `rustc --explain E0796`.
